# cutwater

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.57DCC918AA6ABB8E.idx
assets/: cutwater.css
include/: buffer.h  cutwater.h  editor.h  file_io.h  tui.h  vim.h
src/: buffer.c  buffer_core.c  buffer_navigation.c  editor.c  editor_mode_insert.c  editor_mode_normal.c  main.c  tui.c
src/file_io/: file_io.c
src/gui/: cutwater.c  main.c
src/internal/: buffer_internal.h  editor_internal.h
src/vim/: vim.c
tests/: test_buffer.c  test_editor.c
